testsuite/poke.pkl/int-struct-type-diag-12.pk
/* { dg-do compile } */

type Foo =
  struct uint<32> /* { dg-error "total size" } */
  {
    int<16> a;
    offset<int<17>,B> b;
  };
